# h4g_backend

./: .gitignore  Cargo.toml  README.md  casbin.conf  diesel.toml  role_policy.csv
.cargo/: config.toml
api/welfare_home/: Get uploaded file.bru  bruno.json
api/welfare_home/Auth/: Init pw reset.bru  Login admin.bru  Login superadmin.bru  Login user.bru  Login.bru  Refresh token.bru  Setup Request.bru  Setup check.bru  finish pw reset.bru  verify reset otp.bru
api/welfare_home/Inventory/: Create product.bru  Delete product.bru  Update product img.bru  Update product.bru
api/welfare_home/Me/: Change password.bru  pw reset forced.bru
api/welfare_home/Products/: Get products.bru
api/welfare_home/Users/: Activate user.bru  Delete user.bru  Force reset.bru  Get user.bru  Get users.bru  New user.bru  Suspend user.bru  Update user.bru
migrations/2025-01-11-060923_init/: down.sql  up.sql
migrations/2025-01-13-062153_create_user/: down.sql  up.sql
migrations/2025-01-14-001140_create_product/: down.sql  up.sql
migrations/2025-01-15-094306_create_wallets/: down.sql  up.sql
src/: helper.rs  main.rs  middleware.rs  paseto.rs  schema.rs  utils.rs
src/backend/: mod.rs  pw_reset.rs
src/endpoint/: auth.rs  inventory.rs  me.rs  mod.rs  products.rs  public.rs  users.rs
src/models/: mod.rs  products.rs  user.rs  wallet.rs
src/req_res/: auth.rs  inventory.rs  me.rs  mod.rs  products.rs  users.rs
src/websocket/: mod.rs
