[package]
name = "h4g_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features = ["http2", "tracing", "macros", "multipart"]}
axum-macros = { version = "0.5.0-alpha.1" }
axum-extra = {version = "0.10.0", features = ["typed-header"]}
tower-http = { version = "0.6.2", features = ["cors", "compression-full", "decompression-full", "trace", "normalize-path"] }
tower = {version = "0.5.0"}
argon2 = {version = "0.5.3", features = ["password-hash"]}
pasetors = "0.7.0"
uuid = {version = "1.10.0", features = ["v4", "fast-rng", "serde"]}
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
diesel = {version = "2.2.3", features = ["uuid", "chrono", "serde_json"]}
diesel_full_text_search = "2.2.0"
diesel-async = { version = "0.5.0", features = ["postgres", "bb8", "async-connection-wrapper"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
axum-casbin = {version = "1.1.0"}
socketioxide = { version = "0.15.1", features = ["state", "tracing"] }
once_cell = "1.19.0"
regex = "1.11.1"
dotenvy = "0.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = {version = "1.0.135"}
anyhow = "1.0.86"
log = "0.4.22"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "sync", "fs"] }
chrono = {version = "0.4.39", features = ["serde"]}
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"] }
rand = "0.8.5"
fred = {version = "10.0.3", features = ["enable-rustls"]}
rmp = "0.8.14"
rmp-serde = "1.3.0"
base64 = "0.22.1"
bytes = "1.9.0"
image = "0.25.5"
webp = "0.3.0"
tokio-util = { version = "0.7.13", features = ["io"] }
num-traits = "0.2.19"